--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
     "next": "15.2.4",
     "react": "^19.0.0",
